basic socket connection started

--- a/backend/index.html
+++ b/backend/index.html
@@ -23,8 +23,13 @@
             color: #333;
         }
     </style>
+    <script src="https://cdn.socket.io/4.8.1/socket.io.min.js"></script>
+
 </head>
 <body >
     <h1> Video Call APP</h1>
 </body>
+<script>
+    const socket = io();
+  </script>
 </html>
